Try to fix the horizontall scrollbar

--- a/style.css
+++ b/style.css
@@ -5,5 +5,13 @@
 	margin-right:0px;
 	padding-left:0px;
 	padding-right:0px;
-	background:#037b09;
+	/* background:#037b09; */
+}
+
+html,body{
+	width:100%;
+	height:100%;
+	margin:0;
+	overflow-x:hidden;
+	display:block;
 }
